--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <main>
-        <section class="image-container">
+        <div class="image-container">
             <div class="image-box">
                 <img src="./Resources/Images/illustration-hero.svg" alt="">
             </div>
-        </section>
+        </div>
         <section class="text-container">
             <div class="header">
                 <h1>Order Summary</h1>
